[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/box.png" type="Texture" id=2]
[ext_resource path="res://assets/vrc_osd_mono_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://default_theme.tres" type="Theme" id=4]

[node name="HUD" type="Control"]
modulate = Color( 1, 1, 1, 0.741176 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="TextureRect" parent="."]
visible = false
margin_left = -40.0
margin_top = -40.0
rect_pivot_offset = Vector2( 40, 40 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 610.0
margin_bottom = 330.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 19.0

[node name="FpsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 190.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "60"

[node name="ForwardLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 194.0
margin_right = 384.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00392157, 0.921569, 0.372549, 1 )
text = "0"
align = 1

[node name="Control" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 388.0
margin_right = 580.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "CASSINI v2"
align = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 580.0
margin_bottom = 277.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 281.0
margin_right = 580.0
margin_bottom = 300.0

[node name="PosLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 288.0
margin_bottom = 19.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00392157, 0.921569, 0.372549, 1 )
text = "00 00 00"

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 580.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 8
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.00392157, 0.921569, 0.372549, 1 )
text = "12:00"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
